# GO2_Project

./: .gitignore  go2_ros_env.sh  go2_ros_env_lidar_wired.sh  go2_ros_env_local.sh  go2_ros_env_wifi.sh
go2_bridge_ws/: server.py
go2_bridge_ws/config/rviz/: map_view.rviz
go2_bridge_ws/config/slam_2d/: mapper_params_online_async.yaml
go2_bridge_ws/scripts/: frame_audit_laptop.sh  go2_network.env  start_2d_slam_laptop.sh  start_all_go2_system.sh  start_backend.sh  start_bridge.sh  start_dashboard_backend.sh  start_hesai_lidar.sh  start_lidar_rviz_laptop.sh  start_map_view_local.sh  start_robot_side.sh  stop_2d_slam_laptop.sh  stop_all_go2_system.sh  stop_hesai_lidar.sh  stop_robot_side.sh  sync_to_jetson.sh  timestamp_audit_laptop.sh
go2_bridge_ws/scripts/go2_startup_scripts_fixed/: go2_network.env  start_all_go2_system.sh  start_lidar_rviz_laptop.sh  (+1 more)
go2_bridge_ws/src/go2_camera_capture/: package.xml  setup.cfg  setup.py
go2_bridge_ws/src/go2_camera_capture/go2_camera_capture/: camera_capture_node.py
go2_bridge_ws/src/go2_command_control/: CMakeLists.txt  package.xml
go2_bridge_ws/src/go2_command_control/src/: backend_command_handler_node.cpp
go2_bridge_ws/tools/: odom_static_drift_test.py  odom_to_tf_bridge.py  odom_to_tf_bridge_now.py  scan_stamp_relay.py  timestamp_audit.py
logs/slam_test_20260703_163113/: map_info.txt  mapper_params_online_async.yaml  robot_odom_info.txt  scan_slam_info.txt  tf_base_link_hesai_lidar.txt  tf_map_odom.txt  tf_odom_base_link.txt  topic_list.txt
maps/: go2_xt16_2d_map_20260703_163048.pgm  go2_xt16_2d_map_20260703_163048.yaml  go2_xt16_2d_map_20260706_165740.yaml  go2_xt16_2d_map_20260707_120639.pgm  go2_xt16_2d_map_20260707_120639.yaml  go2_xt16_2d_map_latest.pgm  go2_xt16_2d_map_latest.yaml
note/: GO2_XT16_2D_SLAM_操作教程.md  GO2_启动终端流程.md  Git_Guide.md  backend_bridge_op.md
note/daily/: 2026-06-29.md  2026-06-29_GO2_项目进展记录_汇总版.md  2026-07-01.md  2026-07-02.md  2026-07-03_GO2_XT16_2D_SLAM_工作总结.md  2026-07-06_GO2_二次开发项目进展记录.md  2026-07-07_GO2_XT16_SLAM_拟解决问题.md  7.1.md
rosbags/go2_xt16_2d_slam_20260703_163131/: metadata.yaml
wheels/: websockets-10.4-cp38-cp38-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
(+5 files in other folders)
