<?xml version="1.0"?>
<package format="3">
  <name>go2_camera_capture</name>
  <version>0.1.0</version>
  <description>D435i RGB camera capture node for GO2 inspection system.</description>

  <maintainer email="unitree@example.com">unitree</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
